chore(clickhouse): distroless clickhouse image

--- a/deployment/clickhouse/Dockerfile
+++ b/deployment/clickhouse/Dockerfile
@@ -1,20 +1,15 @@
 FROM golang:1.18.1 AS builder
 WORKDIR /project/src
-ADD https://raw.githubusercontent.com/nats-io/nats.go/8dd5ec6c97bccaf8fc09b45a76d5694f0f6ae403/examples/nats-pub/main.go .
-RUN GO111MODULE=off go get -d && GO111MODULE=off GOOS=linux go build -ldflags='-s -w' -trimpath -o /tmp/nats-pub .
+ADD entrypoint.go .
+RUN GO111MODULE=off go get -d && GO111MODULE=off GOOS=linux go build -ldflags='-s -w' -trimpath -o /tmp/entrypoint .
 
-RUN cd /tmp && curl -L https://github.com/ClickHouse/ClickHouse/releases/download/v22.4.4.7-stable/clickhouse-server-22.4.4.7-amd64.tgz | tar xvz --strip-components=3
+RUN cd /tmp && curl -L https://github.com/ClickHouse/ClickHouse/releases/download/v22.4.4.7-stable/clickhouse-common-static-22.4.4.7-amd64.tgz | tar xvz --strip-components=3
 
-FROM ubuntu:22.04
+RUN mkdir /var/lib/clickhouse
 
-ENV DEBIAN_FRONTEND=noninteractive
+FROM gcr.io/distroless/base-debian11:nonroot
 
-# clickhouse requires locales, tzdata
-# official Debian and Ubuntu images automatically run apt-get clean, so explicit invocation is not required
-RUN apt-get update -qq && apt-get install -qq --no-install-recommends locales tzdata ca-certificates && rm -rf /var/lib/apt /var/lib/dpkg /var/cache/debconf /var/cache/apt /var/log/dpkg.log /var/log/apt && \
-  locale-gen en_US.UTF-8
-
-COPY --from=builder /tmp/nats-pub /usr/bin/nats-pub
+COPY --from=builder /tmp/entrypoint /usr/bin/entrypoint
 COPY --from=builder /tmp/clickhouse /usr/bin/clickhouse
 
 ENV LANG en_US.UTF-8
@@ -22,11 +17,11 @@ ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 ENV TZ UTC
 
-COPY entrypoint.sh /entrypoint.sh
 COPY config.xml /etc/clickhouse-server/config.xml
 COPY users.xml /etc/clickhouse-server/users.xml
+COPY --from=builder --chown=nonroot:nonroot /var/lib/clickhouse /var/lib/clickhouse
 
 EXPOSE 9000 8123 9009
 VOLUME /var/lib/clickhouse
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/usr/bin/entrypoint"]
