--- a/.github/workflows/reusable-image-build-push.yml
+++ b/.github/workflows/reusable-image-build-push.yml
@@ -6,6 +6,9 @@ on:
       imageName:
         required: true
         type: string
+      dockerContextDir:
+        required: true
+        type: string
 
 env:
   REGISTRY: ghcr.io
@@ -32,7 +35,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@v2.3.0
         with:
-          cosign-release: 'v1.8.0'
+          cosign-release: "v1.8.0"
 
 
       - name: Setup Docker buildx
@@ -62,7 +65,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v2.10.0
         with:
-          context: deployment/clickhouse
+          context: ${{ inputs.dockerContextDir }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
