--- a/.github/workflows/app-builder-image-build-push.yml
+++ b/.github/workflows/app-builder-image-build-push.yml
@@ -10,6 +10,12 @@ on:
 jobs:
   build:
     uses: jetbrains/ij-perf-report-aggregator/.github/workflows/reusable-image-build-push.yml@master
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
     with:
       imageName: jetbrains/ij-perf-report-aggregator/app-builder
       dockerContextDir: deployment/app-builder
