chore(app-builder): use Github registry

--- a/deployment/report-aggregator/templates/backend.yaml
+++ b/deployment/report-aggregator/templates/backend.yaml
@@ -44,6 +44,8 @@ spec:
             httpGet:
               path: /health-check
               port: 8080
+      imagePullSecrets:
+        - name: ghcr
 ---
 apiVersion: v1
 kind: Service
