--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite serve",
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
-    "lint": "NODE_ENV=production eslint 'dashboard/*/src/**/*.{ts,vue}' 'jb/dashboard/src/**/*.{ts,vue}'",
+    "lint": "NODE_ENV=production eslint 'dashboard/*/src/**/*.{ts,vue}'",
     "update-deps": "pnpm update -i -r --latest"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-vue": "8.7.1",
     "postcss": "^8.4.13",
-    "rollup": "^2.71.1",
+    "rollup": "^2.72.0",
     "rollup-plugin-visualizer": "5.6.0",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
@@ -33,5 +33,14 @@
     "vite": "2.9.8",
     "vite-svg-loader": "^3.3.0",
     "vue": "3.2.33"
-  }
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": ["primeicons"]
+    }
+  },
+  "engines": {
+    "pnpm": ">=7"
+  },
+  "packageManager": "pnpm@7.0.0"
 }
