--- a/dashboard/app/tsconfig.json
+++ b/dashboard/app/tsconfig.json
@@ -5,6 +5,6 @@
     "src/**/*.vue",
     "../shared/src/shims-vue.d.ts",
     "../shared/src/toast-event-bus.d.ts",
-    "components.d.ts"
+    "../shared/src/components.d.ts"
   ]
 }
