--- a/dashboard/shared/tsconfig.json
+++ b/dashboard/shared/tsconfig.json
@@ -6,6 +6,6 @@
     "src/rison.d.ts",
     "src/e.d.ts",
     "src/**/*.vue",
-    "../../dashboard/app/components.d.ts"
+    "src/components.d.ts"
   ]
 }
