fix(perf): zstd dictionary as app asset

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
 .idea/workspace.xml
 .idea/httpRequests/
-/dist/
 http-client.env.json
-
-db/
 
 /deployment/overlays/
 
 node_modules/
-cmd/frontend/resources/assets/
-cmd/frontend/resources/favicon.svg
-cmd/frontend/resources/index.html
-cmd/frontend/resources/*.br
+cmd/frontend/resources/
 values-resolved.yaml
 
 .eslintcache
