--- a/deployment/report-aggregator/templates/tc-collector.yaml
+++ b/deployment/report-aggregator/templates/tc-collector.yaml
@@ -43,7 +43,7 @@ spec:
                   value: "clickhouse:9000"
               volumeMounts:
                 - mountPath: /etc/config
-                  name: tc-collector-config
+                  name: config
           imagePullSecrets:
             - name: ghcr
           volumes:
