feat: use lara theme color scheme

--- a/dashboard/ij/package.json
+++ b/dashboard/ij/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "primevue": "^3.12.6",
     "shared": "workspace:*",
+    "tailwind-ui": "workspace:*",
     "vue": "3.2.33",
     "vue-router": "4.0.15"
   }
