--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "update-deps": "pnpm update -i -r --latest"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "5.23.0",
@@ -24,7 +25,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-vue": "8.7.1",
     "postcss": "^8.4.13",
-    "rollup": "^2.72.1",
+    "rollup": "^2.73.0",
     "rollup-plugin-visualizer": "5.6.0",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
@@ -33,7 +34,7 @@
     "vite": "2.9.9",
     "vite-svg-loader": "^3.3.0",
     "vue": "3.2.33",
-    "vue-tsc": "^0.34.13"
+    "vue-tsc": "^0.34.15"
   },
   "pnpm": {
     "peerDependencyRules": {
