--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -5,13 +5,13 @@
     "@heroicons/vue": "1.0.6",
     "echarts": "5.3.2",
     "echarts-stat": "1.2.0",
-    "fast-equals": "3.0.2",
+    "fast-equals": "3.0.3",
     "humanize-duration": "3.27.1",
     "primevue": "3.12.6",
     "rxjs": "8.0.0-alpha.3",
-    "vue": "3.2.33",
-    "vue-router": "4.0.15",
-    "tailwind-ui": "workspace:*"
+    "tailwind-ui": "workspace:*",
+    "vue": "3.2.36",
+    "vue-router": "4.0.15"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.1"
