--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
-    "@typescript-eslint/eslint-plugin": "5.26.0",
-    "@typescript-eslint/parser": "5.26.0",
+    "@typescript-eslint/eslint-plugin": "5.27.0",
+    "@typescript-eslint/parser": "5.27.0",
     "@vitejs/plugin-vue": "2.3.3",
     "@vue/compiler-sfc": "3.2.36",
     "@vue/eslint-config-typescript": "10.0.0",
@@ -34,7 +34,7 @@
     "vite": "2.9.9",
     "vite-svg-loader": "^3.3.0",
     "vue": "3.2.36",
-    "vue-tsc": "^0.35.0"
+    "vue-tsc": "^0.35.2"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -46,5 +46,9 @@
   "engines": {
     "pnpm": ">=7"
   },
-  "packageManager": "pnpm@7.0.0"
+  "packageManager": "pnpm@7.0.0",
+  "dependencies": {
+    "@types/node": "^17.0.36",
+    "eslint-plugin-unicorn": "^42.0.0"
+  }
 }
