--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -15,6 +15,7 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "skipLibCheck": true,
+    "jsx": "preserve",
     "lib": [
       "esnext",
       "dom"
