--- a/dashboard/tailwind-ui/package.json
+++ b/dashboard/tailwind-ui/package.json
@@ -2,6 +2,8 @@
   "name": "tailwind-ui",
   "private": true,
   "dependencies": {
+    "@headlessui/vue": "1.6.5",
+    "@heroicons/vue": "1.0.6",
     "vue": "3.2.37"
   }
 }
