--- a/package.json
+++ b/package.json
@@ -14,30 +14,32 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "@vitejs/plugin-vue": "2.3.3",
-    "@vue/compiler-sfc": "3.2.37",
-    "@vue/eslint-config-typescript": "11.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "@vitejs/plugin-vue": "^3.0.0-beta.0",
+    "@vue/compiler-sfc": "^3.2.37",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-vue": "9.1.1",
+    "eslint": "^8.18.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.1.1",
     "postcss": "^8.4.14",
     "rollup": "^2.75.7",
-    "rollup-plugin-visualizer": "5.6.0",
+    "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
-    "typescript": "4.7.4",
-    "unplugin-vue-components": "0.19.9",
-    "vite": "2.9.12",
-    "vite-svg-loader": "^3.4.0",
-    "vue": "3.2.37",
-    "vue-tsc": "^0.38.1"
+    "typescript": "^4.7.4",
+    "unplugin-vue-components": "^0.20.1",
+    "vite": "^3.0.0-beta.5",
+    "vue": "^3.2.37",
+    "vue-tsc": "^0.38.2"
   },
   "pnpm": {
     "peerDependencyRules": {
+      "allowedVersions": {
+        "vite": "3"
+      },
       "ignoreMissing": [
         "primeicons"
       ]
