chore: include sha256 for config map name to make checking more convenient

--- a/deployment/report-aggregator/templates/tc-collector.yaml
+++ b/deployment/report-aggregator/templates/tc-collector.yaml
@@ -46,11 +46,11 @@ spec:
           volumes:
             - name: config
               configMap:
-                name: tc-collector-config
+                name: tc-collector-config-{{ .Values.collector | toYaml | sha256sum }}
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: tc-collector-config
+  name: tc-collector-config-{{ .Values.collector | toYaml | sha256sum }}
 data:
   config.json: {{ .Values.collector | toJson | quote }}
