--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -5,6 +5,8 @@
     "compare-versions": "^4.1.3",
     "echarts": "5.3.3",
     "fast-equals": "4.0.1",
+    "tailwind-ui": "workspace:*",
+    "@headlessui/vue": "^1.6.5",
     "primevue": "3.15.0",
     "rxjs": "8.0.0-alpha.3",
     "shared": "workspace:*",
