--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@tailwindcss/typography": "^0.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-vue": "^3.0.0-beta.1",
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -29,12 +29,12 @@
     "rollup": "^2.76.0",
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.53.0",
-    "tailwindcss": "^3.1.5",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
     "unplugin-vue-components": "^0.21.1",
-    "vite": "^3.0.0-beta.9",
+    "vite": "^3.0.0",
     "vue": "^3.2.37",
-    "vue-tsc": "^0.38.4"
+    "vue-tsc": "^0.38.5"
   },
   "pnpm": {
     "peerDependencyRules": {
