--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
     "@tailwindcss/typography": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "@vitejs/plugin-vue": "^3.0.0-beta.1",
+    "@vitejs/plugin-vue": "^3.0.1",
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-typescript": "^11.0.0",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.7",
-    "eslint": "^8.19.0",
+    "eslint": "^8.20.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.2.0",
     "postcss": "^8.4.14",
-    "rollup": "^2.76.0",
-    "rollup-plugin-visualizer": "^5.6.0",
+    "rollup": "^2.77.0",
+    "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
     "unplugin-vue-components": "^0.21.1",
-    "vite": "^3.0.0",
+    "vite": "^3.0.1",
     "vue": "^3.2.37",
-    "vue-tsc": "^0.38.5"
+    "vue-tsc": "^0.38.8"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -51,7 +51,7 @@
   },
   "packageManager": "pnpm@7.0.0",
   "dependencies": {
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.0.6",
     "eslint-plugin-unicorn": "^43.0.1"
   }
 }
