--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "app",
+  "name": "new-dashboard",
   "private": true,
   "dependencies": {
-    "@fontsource/inter": "4.5.12",
-    "@fontsource/jetbrains-mono": "4.5.10",
+    "echarts": "5.3.3",
+    "echarts-stat": "1.2.0",
     "ij": "workspace:*",
-    "new-dashboard": "workspace:*",
-    "primevue": "3.16.2",
+    "primevue": "3.16.1",
     "report-visualizer": "workspace:*",
-    "rxjs": "8.0.0-alpha.4",
+    "rxjs": "8.0.0-alpha.3",
     "shared": "workspace:*",
     "vue": "3.2.37",
     "vue-router": "4.1.4"
