--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -2,6 +2,7 @@
   "name": "new-dashboard",
   "private": true,
   "dependencies": {
+    "@heroicons/vue": "2.0.7",
     "echarts": "5.3.3",
     "echarts-stat": "1.2.0",
     "ij": "workspace:*",
