--- a/deployment/report-aggregator/templates/clickhouse.yaml
+++ b/deployment/report-aggregator/templates/clickhouse.yaml
@@ -20,16 +20,18 @@ spec:
         fsGroup: 65532
       initContainers:
         - name: restore-clickhouse-backup
-          image: {{ .Values.images.clickhouseRestore }}
+          image: {{ .Values.images.clickhouse }}
           resources:
             requests:
               cpu: "0.2"
-              memory: "128Mi"
+              memory: "256Mi"
             limits:
               cpu: "0.4"
-              memory: "256Mi"
+              memory: "512Mi"
           env:
             - name: REMOVE_OLD_DATA_DIR
+              value: "true"
+            - name: RESTORE_DB
               value: "true"
             - name: DISABLE_PROGRESS
               value: "true"
