fix: simplify local db restore - use clickhouse-backub via programmatic API

--- a/deployment/report-aggregator/values.yaml
+++ b/deployment/report-aggregator/values.yaml
@@ -12,6 +12,6 @@ collector:
 images:
   backend: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/backend
   frontend: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/frontend
-  clickhouse: ""
+  clickhouse: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/clickhouse
   clickhouseBackup: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/clickhouse-backup
   collector: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/tc-collector
