--- a/deployment/report-aggregator/templates/tc-collector.yaml
+++ b/deployment/report-aggregator/templates/tc-collector.yaml
@@ -14,7 +14,9 @@ spec:
           labels:
             {{- include "common.selectorLabels" . | nindent 12 }}
         spec:
-          restartPolicy: OnFailure
+          restartPolicy: Never
+          # 12 hours
+          activeDeadlineSeconds: 43200
           containers:
             - name: tc-collector
               image: {{ .Values.images.collector }}
@@ -23,7 +25,7 @@ spec:
                   cpu: "0.2"
                   memory: 512Mi
                 limits:
-                  cpu: "0.4"
+                  cpu: "0.5"
                   memory: 2Gi
               env:
                 - name: TC_TOKEN
@@ -33,7 +35,7 @@ spec:
                       key: token
                 # memory limit — do not overload server
                 - name: INSERT_WORKER_COUNT
-                  value: "1"
+                  value: "2"
                 - name: NATS
                   value: "nats:4222"
                 - name: CLICKHOUSE
