feat: light presentation of filter form

--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -9,6 +9,7 @@
     "humanize-duration": "3.27.3",
     "primevue": "3.18.1",
     "rxjs": "8.0.0-alpha.5",
+    "@headlessui/vue": "^1.7.4",
     "tailwind-ui": "workspace:*",
     "vue": "3.2.44",
     "vue-router": "4.1.6"
