AT-250 Provide a connection pool that will send limited number of requests
Provide pool on frontend as well otherwise we fail with net::ERR_INSUFFICIENT_RESOURCES since Chrome can't handle 10000 requests at once

--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -8,6 +8,7 @@
     "echarts-stat": "1.2.0",
     "fast-equals": "4.0.3",
     "humanize-duration": "3.27.3",
+    "p-limit": "^4.0.0",
     "primevue": "3.20.0",
     "rxjs": "8.0.0-alpha.5",
     "tailwind-ui": "workspace:*",
