--- a/dashboard/report-visualizer/package.json
+++ b/dashboard/report-visualizer/package.json
@@ -2,12 +2,12 @@
   "name": "report-visualizer",
   "private": true,
   "dependencies": {
-    "@headlessui/vue": "^1.7.4",
-    "compare-versions": "^5.0.1",
-    "echarts": "5.4.0",
+    "@headlessui/vue": "^1.7.7",
+    "compare-versions": "6.0.0-rc.1",
+    "echarts": "5.4.1",
     "fast-equals": "4.0.3",
-    "primevue": "3.20.0",
-    "rxjs": "8.0.0-alpha.5",
+    "primevue": "3.22.3",
+    "rxjs": "8.0.0-alpha.7",
     "shared": "workspace:*",
     "tailwind-ui": "workspace:*",
     "vue": "3.2.45",
