Fix/suppress eslint warnings and console warnings as well

--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,4 @@ postcss.config.js
 tailwind.config.js
 .eslintrc.js
 cmd/frontend/resources/**
+/dashboard/new-dashboard/src/components/common/BranchIcon.vue
