--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@fontsource/inter": "4.5.15",
     "@fontsource/jetbrains-mono": "4.5.12",
+    "ij": "workspace:*",
     "new-dashboard": "workspace:*",
     "primevue": "3.22.3",
     "report-visualizer": "workspace:*",
