--- a/dashboard/shared/package.json
+++ b/dashboard/shared/package.json
@@ -11,6 +11,7 @@
     "p-limit": "^4.0.0",
     "primevue": "3.22.3",
     "rxjs": "8.0.0-alpha.7",
+    "tailwind-ui": "workspace:*",
     "vue": "3.2.45",
     "vue-router": "4.1.6"
   },
