--- a/deployment/report-aggregator/templates/backend.yaml
+++ b/deployment/report-aggregator/templates/backend.yaml
@@ -27,6 +27,8 @@ spec:
               value: "clickhouse:9000"
             - name: NATS
               value: "nats://nats:4222"
+            - name: DATABASE_URL
+              value: {{ .Values.postgres.db_url | quote }}
           resources:
             requests:
               cpu: "0.5"
