--- a/deployment/report-aggregator/templates/tc-collector.yaml
+++ b/deployment/report-aggregator/templates/tc-collector.yaml
@@ -40,6 +40,8 @@ spec:
                   value: "nats:4222"
                 - name: CLICKHOUSE
                   value: "clickhouse:9000"
+                - name: DATABASE_URL
+                  value: { { .Values.postgres.db_url | quote } }
               volumeMounts:
                 - mountPath: /etc/config
                   name: config
