--- a/.eslintignore
+++ b/.eslintignore
@@ -6,3 +6,4 @@ tailwind.config.js
 .eslintrc.js
 cmd/frontend/resources/**
 /dashboard/new-dashboard/src/components/common/BranchIcon.vue
+/dashboard/new-dashboard/src/components/common/SpaceIcon.vue
