--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@fontsource/inter": "4.5.15",
     "@fontsource/jetbrains-mono": "4.5.12",
+    "floating-vue": "2.0.0-beta.20",
     "new-dashboard": "workspace:*",
     "primevue": "3.27.0",
     "report-visualizer": "workspace:*",
