--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@heroicons/vue": "2.0.17",
     "echarts": "5.4.2",
+    "floating-vue": "2.0.0-beta.20",
     "primevue": "3.27.0",
     "report-visualizer": "workspace:*",
     "rxjs": "8.0.0-alpha.7",
