--- a/deployment/app-builder/Dockerfile
+++ b/deployment/app-builder/Dockerfile
@@ -8,9 +8,8 @@ RUN cd /usr/local/bin && \
   curl -L https://get.helm.sh/helm-v3.10.2-linux-amd64.tar.gz | tar xvz --strip-components=1 linux-amd64/helm
 
 RUN cd /usr/local && \
-  curl -L https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz | tar xz --strip-components=1 node-v$NODE_VERSION-linux-x64/lib node-v$NODE_VERSION-linux-x64/bin node-v$NODE_VERSION-linux-x64/include
-
-RUN npm install -g pnpm
+  curl -L https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz | tar xz --strip-components=1 node-v$NODE_VERSION-linux-x64/lib node-v$NODE_VERSION-linux-x64/bin node-v$NODE_VERSION-linux-x64/include && \
+  corepack enable && corepack prepare pnpm@8.6.0 --activate
 
 ENV GOPATH /go
 
