--- a/deployment/report-aggregator/templates/tc-collector.yaml
+++ b/deployment/report-aggregator/templates/tc-collector.yaml
@@ -14,6 +14,8 @@ spec:
           labels:
             {{- include "common.selectorLabels" . | nindent 12 }}
         spec:
+          securityContext:
+            runAsNonRoot: true
           restartPolicy: Never
           # 12 hours
           activeDeadlineSeconds: 43200
