--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.14",
     "@heroicons/vue": "2.0.18",
+    "@vueuse/core": "^10.1.2",
     "compare-versions": "6.0.0-rc.1",
     "echarts": "5.4.2",
     "echarts-stat": "1.2.0",
