(chore) Update to prettier 3.0

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
   "semi": false,
   "printWidth": 180,
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "trailingComma": "es5"
 }
