--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -5,17 +5,17 @@
     "@headlessui/vue": "^1.7.14",
     "@heroicons/vue": "2.0.18",
     "@vueuse/core": "^10.2.1",
-    "compare-versions": "6.0.0-rc.2",
+    "compare-versions": "6.0.0",
     "echarts": "5.4.2",
     "echarts-stat": "1.2.0",
     "fast-equals": "5.0.1",
     "floating-vue": "2.0.0-beta.24",
-    "humanize-duration": "3.28.0",
+    "humanize-duration": "3.29.0",
     "p-limit": "^4.0.0",
     "primevue": "3.29.2",
     "rxjs": "8.0.0-alpha.10",
     "vue": "3.3.4",
-    "vue-router": "4.2.3"
+    "vue-router": "4.2.4"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.1"
