--- a/deployment/report-aggregator/templates/backend.yaml
+++ b/deployment/report-aggregator/templates/backend.yaml
@@ -7,6 +7,7 @@ metadata:
     {{- include "common.labels" . | nindent 4 }}
 spec:
   replicas: 2
+  minAvailable: 2
   selector:
     matchLabels:
       app: backend
