--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -6,6 +6,7 @@
     "@fontsource/jetbrains-mono": "5.0.9",
     "floating-vue": "2.0.0-beta.24",
     "new-dashboard": "workspace:*",
+    "pinia": "^2.1.6",
     "primevue": "3.32.2",
     "rxjs": "8.0.0-alpha.10",
     "vue": "3.3.4",
