--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -12,6 +12,7 @@
     "floating-vue": "2.0.0-beta.24",
     "humanize-duration": "3.29.0",
     "p-limit": "^4.0.0",
+    "pinia": "^2.1.6",
     "primevue": "3.32.2",
     "rxjs": "8.0.0-alpha.10",
     "vue": "3.3.4",
