Increase resources for TC collector otherwise it can't handle 1-month data

--- a/deployment/report-aggregator/templates/tc-collector.yaml
+++ b/deployment/report-aggregator/templates/tc-collector.yaml
@@ -25,10 +25,10 @@ spec:
               resources:
                 requests:
                   cpu: "0.5"
-                  memory: 512Mi
-                limits:
-                  cpu: "1"
                   memory: 1Gi
+                limits:
+                  cpu: "1.5"
+                  memory: 2Gi
               env:
                 - name: TC_TOKEN
                   valueFrom:
