Support combined queries

--- a/.eslintignore
+++ b/.eslintignore
@@ -7,3 +7,4 @@ tailwind.config.js
 cmd/frontend/resources/**
 /dashboard/new-dashboard/src/components/common/BranchIcon.vue
 /dashboard/new-dashboard/src/components/common/SpaceIcon.vue
+/dashboard/app/tests/**
