Provide correct backend URL

--- a/deployment/report-aggregator/templates/degradation-detector.yaml
+++ b/deployment/report-aggregator/templates/degradation-detector.yaml
@@ -32,5 +32,7 @@ spec:
               env:
                 - name: SLACK_WEBHOOK_URL
                   value: {{ .Values.slack.webhookUrl | quote }}
+                - name: BACKEND_URL
+                  value: "backend:8080"
           imagePullSecrets:
             - name: ghcr
