Split jobs for backend and frontend

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -6,15 +6,27 @@ permissions:
   contents: read
   pull-requests: read
 jobs:
-  LintAndTest:
-    name: lint golang
+  lintAndtestBackend:
+    name: lint and test backend
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: 1.21.4
+      - name: Run Go tests
+        run: go test ./pkg/...
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          only-new-issues: true
+          args: --timeout 5m0s
+  lintAndTestFrontEnd:
+    name: lint and test frontend
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v3
-      - run: mkdir cmd/frontend/resources && touch cmd/frontend/resources/make-typecheck-happy.txt
       - uses: pnpm/action-setup@v2
         with:
           version: 8
@@ -24,15 +36,7 @@ jobs:
         run: pnpm eslint . --ext .js,.vue,.ts
       - name: Run VueTSC
         run: pnpm vue-tsc --noEmit
-      - name: Run Go tests
-        run: go test ./pkg/...
       - name: Run Prettier
         run: pnpm prettier --check . --log-level warn
-      - name: Run frontend tests
+      - name: Run tests
         run: pnpm test
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-          only-new-issues: true
-          args: --timeout 5m0s
