--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.21.4
+      - name: Create dummy file in resources
+        run: mkdir cmd/frontend/resources && touch cmd/frontend/resources/make-typecheck-happy.txt
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
