--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "ignorePatterns": [
     "**/node_modules/**/*.*"
   ],
+  "type": "module",
   "scripts": {
     "dev": "vite serve",
     "build": "vite build --emptyOutDir",
@@ -15,8 +16,8 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/compiler-sfc": "^3.3.8",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -31,9 +32,9 @@
     "rollup": "^4.5.0",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "4.5.0",
+    "vite": "5.0.2",
     "vue": "^3.3.8",
     "vue-tsc": "^1.8.22"
   },
