Introduce workers for change point calculation
This unfreeze UI and make calculations much faster

--- a/.eslintignore
+++ b/.eslintignore
@@ -8,4 +8,5 @@ cmd/frontend/resources/**
 /dashboard/new-dashboard/src/components/common/BranchIcon.vue
 /dashboard/new-dashboard/src/components/common/SpaceIcon.vue
 /dashboard/new-dashboard/src/components/common/CopyIcon.vue
+/dashboard/new-dashboard/src/shared/webWorker/**
 /dashboard/app/tests/**
