--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unicorn": "^49.0.0",
+    "isoworker": "^0.2.4",
     "prettier": "^3.1.0",
     "vitest": "^0.34.6"
   }
