Implemented new test infrastructure. Updated configs. Added tests for Branch and Machine configurators.

--- a/dashboard/new-dashboard/tsconfig.json
+++ b/dashboard/new-dashboard/tsconfig.json
@@ -1,4 +1,12 @@
 {
   "extends": "../../tsconfig-base.json",
-  "include": ["src/**/*.ts", "src/**/*.vue", "./src/components/common/shims-vue.d.ts", "./src/components/common/toast-event-bus.d.ts", "./src/components/common/components.d.ts"]
+  "include": [
+    "tests/**/*.ts",
+    "tests/**/*.js",
+    "src/**/*.ts",
+    "src/**/*.vue",
+    "./src/components/common/shims-vue.d.ts",
+    "./src/components/common/toast-event-bus.d.ts",
+    "./src/components/common/components.d.ts"
+  ]
 }
