--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
     "//": "pnpm vue-tsc --noEmit && ",
-    "lint": "NODE_ENV=production eslint 'dashboard/*/src/**/*.{ts,vue}'",
+    "lint": "NODE_ENV=production eslint 'dashboard/*/{src,tests}/**/*.{ts,vue}'",
     "update-deps": "pnpm update -i -r --latest",
     "test": "vitest run"
   },
