(chore) Update libs

--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -2,26 +2,26 @@
   "name": "new-dashboard",
   "private": true,
   "dependencies": {
-    "@headlessui/vue": "^1.7.16",
+    "@headlessui/vue": "^1.7.17",
     "@heroicons/vue": "2.1.1",
-    "@vueuse/core": "^10.7.0",
+    "@vueuse/core": "^10.7.1",
     "compare-versions": "6.1.0",
     "echarts": "5.4.3",
     "echarts-stat": "1.2.0",
     "fast-equals": "5.0.1",
-    "floating-vue": "2.0.0-beta.24",
+    "floating-vue": "5.0.2",
     "humanize-duration": "3.31.0",
     "p-limit": "^5.0.0",
     "pinia": "^2.1.7",
-    "primevue": "3.44.0",
+    "primevue": "3.46.0",
     "rxjs": "8.0.0-alpha.12",
-    "vue": "3.3.13",
+    "vue": "3.4.6",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
     "@testing-library/vue": "^8.0.1",
-    "@types/humanize-duration": "^3.27.3",
+    "@types/humanize-duration": "^3.27.4",
     "global-jsdom": "^9.1.0",
-    "jsdom": "^23.0.1"
+    "jsdom": "^23.2.0"
   }
 }
