--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -4,12 +4,12 @@
   "dependencies": {
     "@fontsource/inter": "5.0.16",
     "@fontsource/jetbrains-mono": "5.0.18",
-    "floating-vue": "2.0.0-beta.24",
+    "floating-vue": "5.0.2",
     "new-dashboard": "workspace:*",
     "pinia": "^2.1.7",
-    "primevue": "3.44.0",
+    "primevue": "3.46.0",
     "rxjs": "8.0.0-alpha.12",
-    "vue": "3.3.13",
+    "vue": "3.4.6",
     "vue-router": "4.2.5"
   }
 }
