--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -15,13 +15,13 @@
     "pinia": "^2.1.7",
     "primevue": "3.46.0",
     "rxjs": "8.0.0-alpha.12",
-    "vue": "3.4.8",
+    "vue": "3.4.10",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "msw": "^2.0.13",
     "@types/humanize-duration": "^3.27.4",
     "global-jsdom": "^9.1.0",
-    "jsdom": "^23.2.0"
+    "jsdom": "^23.2.0",
+    "msw": "^2.0.13"
   }
 }
