--- a/deployment/report-aggregator/templates/degradation-detector.yaml
+++ b/deployment/report-aggregator/templates/degradation-detector.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "common.labels" . | nindent 4 }}
 spec:
-  schedule: "0 * * * *"
+  schedule: "0 8 * * *"
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
